2009-07-04  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Check for GpgME needed for S/MIME support.

	* gmime/Makefile.am: Include gmime-pkcs7-context.[c,h] in the
	build.

	* gmime/gmime-pkcs7-context.[c,h]: New source files implementing
	the pkcs7 cipher context using GpgMe.

2009-07-04  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_signer_info): Updated
	for API changes to the GMimeSigner stuff.

	* gmime/gmime-cipher-context.c (g_mime_signer_new): Initialize the
	newly added fields.
	(g_mime_signer_free): Free the newly added fields.
	(g_mime_signer_set_issuer_serial): New field accessor.
	(g_mime_signer_get_issuer_serial): Same.
	(g_mime_signer_set_issuer_name): Another new accessor.
	(g_mime_signer_get_issuer_name): Same.
	(g_mime_signer_set_email): And another...
	(g_mime_signer_get_email): Same.
	(g_mime_signer_set_sig_created): Renamed from
	g_mime_signer_set_created().
	(g_mime_signer_get_sig_created): Renamed from
	g_mime_signer_get_created().
	(g_mime_signer_set_sig_expires): Renamed from
	g_mime_signer_set_expires().
	(g_mime_signer_get_sig_expires): Renamed from
	g_mime_signer_get_expires().
	(g_mime_signer_set_key_created): New field accesor.
	(g_mime_signer_get_key_created): Same.
	(g_mime_signer_set_key_expires): Same.
	(g_mime_signer_get_key_expires): Same.

2009-07-02  Stanislav Brabec  <sbrabec@suse.cz>

	* configure.ac: Simplified configuring of gmime in a
	cross-compilation environment. Make it possible to work-around
	AC_TRY_RUN limitations by copying of target system iconv-detect.h
	and setting ac_cv_have_iconv_detect_h=yes.

2009-05-07  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream-fs.c (stream_read): Removed gross hack.
	(stream_write): Same.
	(g_mime_stream_fs_new): On Windows systems, set the translation
	mode to BINARY.
	(g_mime_stream_fs_new_with_bounds): Same.

	* gmime/gmime-stream-file.c: Same as GMimeStreamFs

2009-05-02  Jeffrey Stedfast  <fejj@novell.com>
