@@ -1415,6 +1415,26 @@
         <return-type type="gboolean" />
       </method>
     </object>
+    <object name="Pkcs7Context" cname="GMimePkcs7Context" parent="GMimeCipherContext">
+      <field name="Priv" cname="priv" type="struct-_GMimePkcs7ContextPrivate*" />
+      <method name="GetAlwaysTrust" cname="g_mime_pkcs7_context_get_always_trust">
+        <return-type type="gboolean" />
+      </method>
+      <method name="GetType" cname="g_mime_pkcs7_context_get_type" shared="true">
+        <return-type type="GType" />
+      </method>
+      <constructor cname="g_mime_pkcs7_context_new">
+        <parameters>
+          <parameter type="GMimePasswordRequestFunc" name="request_passwd" />
+        </parameters>
+      </constructor>
+      <method name="SetAlwaysTrust" cname="g_mime_pkcs7_context_set_always_trust">
+        <return-type type="void" />
+        <parameters>
+          <parameter type="gboolean" name="always_trust" />
+        </parameters>
+      </method>
+    </object>
     <object name="Stream" cname="GMimeStream" parent="GObject">
       <field name="SuperStream" cname="super_stream" type="GMimeStream*" />
       <field name="Position" cname="position" type="gint64" />
@@ -2574,32 +2594,52 @@
       <field name="Status" cname="status" bits="2" type="unsigned int" access="public" writeable="true" />
       <field name="Errors" cname="errors" bits="4" type="unsigned int" access="public" writeable="true" />
       <field name="Trust" cname="trust" bits="3" type="unsigned int" access="public" writeable="true" />
-      <field name="Unused" cname="unused" bits="23" type="unsigned int" access="public" writeable="true" />
+      <field name="Unused" cname="unused" bits="21" type="unsigned int" access="public" writeable="true" />
+      <field name="IssuerSerial" cname="issuer_serial" type="char*" access="public" writeable="true" />
+      <field name="IssuerName" cname="issuer_name" type="char*" access="public" writeable="true" />
       <field name="Fingerprint" cname="fingerprint" type="char*" access="public" writeable="true" />
-      <field name="Created" cname="created" type="time_t" access="public" writeable="true" />
-      <field name="Expires" cname="expires" type="time_t" access="public" writeable="true" />
+      <field name="SigCreated" cname="sig_created" type="time_t" access="public" writeable="true" />
+      <field name="SigExpires" cname="sig_expires" type="time_t" access="public" writeable="true" />
+      <field name="KeyCreated" cname="key_created" type="time_t" access="public" writeable="true" />
+      <field name="KeyExpires" cname="key_expires" type="time_t" access="public" writeable="true" />
       <field name="Keyid" cname="keyid" type="char*" access="public" writeable="true" />
+      <field name="Email" cname="email" type="char*" access="public" writeable="true" />
       <field name="Name" cname="name" type="char*" access="public" writeable="true" />
       <method name="Free" cname="g_mime_signer_free">
         <return-type type="void" />
       </method>
-      <method name="GetCreated" cname="g_mime_signer_get_created">
-        <return-type type="time_t" />
+      <method name="GetEmail" cname="g_mime_signer_get_email">
+        <return-type type="const-char*" />
       </method>
       <method name="GetErrors" cname="g_mime_signer_get_errors">
         <return-type type="GMimeSignerError" />
       </method>
-      <method name="GetExpires" cname="g_mime_signer_get_expires">
-        <return-type type="time_t" />
-      </method>
       <method name="GetFingerprint" cname="g_mime_signer_get_fingerprint">
         <return-type type="const-char*" />
+      </method>
+      <method name="GetIssuerName" cname="g_mime_signer_get_issuer_name">
+        <return-type type="const-char*" />
+      </method>
+      <method name="GetIssuerSerial" cname="g_mime_signer_get_issuer_serial">
+        <return-type type="const-char*" />
+      </method>
+      <method name="GetKeyCreated" cname="g_mime_signer_get_key_created">
+        <return-type type="time_t" />
+      </method>
+      <method name="GetKeyExpires" cname="g_mime_signer_get_key_expires">
+        <return-type type="time_t" />
       </method>
       <method name="GetKeyId" cname="g_mime_signer_get_key_id">
         <return-type type="const-char*" />
       </method>
       <method name="GetName" cname="g_mime_signer_get_name">
         <return-type type="const-char*" />
+      </method>
+      <method name="GetSigCreated" cname="g_mime_signer_get_sig_created">
+        <return-type type="time_t" />
+      </method>
+      <method name="GetSigExpires" cname="g_mime_signer_get_sig_expires">
+        <return-type type="time_t" />
       </method>
       <method name="GetStatus" cname="g_mime_signer_get_status">
         <return-type type="GMimeSignerStatus" />
@@ -2611,10 +2651,10 @@
       <method name="Next" cname="g_mime_signer_next">
         <return-type type="GMimeSigner*" />
       </method>
-      <method name="SetCreated" cname="g_mime_signer_set_created">
+      <method name="SetEmail" cname="g_mime_signer_set_email">
         <return-type type="void" />
         <parameters>
-          <parameter type="time_t" name="created" />
+          <parameter type="const-char*" name="email" />
         </parameters>
       </method>
       <method name="SetErrors" cname="g_mime_signer_set_errors">
@@ -2623,16 +2663,34 @@
           <parameter type="GMimeSignerError" name="error" />
         </parameters>
       </method>
-      <method name="SetExpires" cname="g_mime_signer_set_expires">
-        <return-type type="void" />
-        <parameters>
-          <parameter type="time_t" name="expires" />
-        </parameters>
-      </method>
       <method name="SetFingerprint" cname="g_mime_signer_set_fingerprint">
         <return-type type="void" />
         <parameters>
           <parameter type="const-char*" name="fingerprint" />
+        </parameters>
+      </method>
+      <method name="SetIssuerName" cname="g_mime_signer_set_issuer_name">
+        <return-type type="void" />
+        <parameters>
+          <parameter type="const-char*" name="issuer_name" />
+        </parameters>
+      </method>
+      <method name="SetIssuerSerial" cname="g_mime_signer_set_issuer_serial">
+        <return-type type="void" />
+        <parameters>
+          <parameter type="const-char*" name="issuer_serial" />
+        </parameters>
+      </method>
+      <method name="SetKeyCreated" cname="g_mime_signer_set_key_created">
+        <return-type type="void" />
+        <parameters>
+          <parameter type="time_t" name="created" />
+        </parameters>
+      </method>
+      <method name="SetKeyExpires" cname="g_mime_signer_set_key_expires">
+        <return-type type="void" />
+        <parameters>
+          <parameter type="time_t" name="expires" />
         </parameters>
       </method>
       <method name="SetKeyId" cname="g_mime_signer_set_key_id">
@@ -2645,6 +2703,18 @@
         <return-type type="void" />
         <parameters>
           <parameter type="const-char*" name="name" />
+        </parameters>
+      </method>
+      <method name="SetSigCreated" cname="g_mime_signer_set_sig_created">
+        <return-type type="void" />
+        <parameters>
+          <parameter type="time_t" name="created" />
+        </parameters>
+      </method>
+      <method name="SetSigExpires" cname="g_mime_signer_set_sig_expires">
+        <return-type type="void" />
+        <parameters>
+          <parameter type="time_t" name="expires" />
         </parameters>
       </method>
       <method name="SetStatus" cname="g_mime_signer_set_status">
