@@ -1,3 +1,10 @@
+2009-08-12  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-utils.c (charset_convert): If iconv() fails, treat
+	conditions where outleft == 0 the same as if we had gotten an
+	E2BIG error (e.g. we need to grow the output buffer) so that we
+	don't overrun it while appending a '?' placeholder character.
+
 2009-07-04  Jeffrey Stedfast  <fejj@novell.com>
 
 	* configure.ac: Check for GpgME needed for S/MIME support.
@@ -286,7 +293,7 @@
 	simple arithmetic to update our stream->position on Windows since it
 	may do line-ending translation behind our backs. Call ftell() to get
 	our real position after reading or writing.
-	
+
 	* gmime/gmime-stream-fs.c (stream_read, stream_write): Same idea.
 
 	* gmime/gmime-utils.c (mktime_utc): Fixed the Windows code-path.
